# biu

./: .browserslistrc  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierrc  .release-it.json  .stylelintignore  .stylelintrc  CHANGELOG.md  LICENSE  README.md  changelog.config.json  changelog.config.ts  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  stylelint.config.mjs  tailwind.config.mjs  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/instructions/: dev.instructions.md
.github/workflow/: release.yml
.github/workflows/: eslint-review.yml  knip-report.yml  knip.yml  maual-test-build.yml  pr-test-build.yml  release.yml  test-build.yml  (+1 more)
.husky/: pre-commit
electron/: createTray.js  createTray.mjs  createTray.ts  entitlements.mac.plist  lyrics-overlay-settings.ts  lyrics-overlay.ts  main.js  main.mjs  main.ts  mini-player.ts  path.ts  preload.js  preload.mjs  preload.ts  shortcut-manager.ts  shortcut.ts  store.mjs  store.ts  tray.ts  utils.ts
plugins/: build.ts  dev.ts  electron-build.ts  electron-compiler.ts  electron-config-build.ts  electron-dev.ts  rsbuild-plugin-electron.ts
scripts/: build.js  dev.js  main.js  preload.js  vite.config.js
src/: app.css  app.tsx  hero.ts  index.html  index.tsx  menu.tsx  menus.tsx  renderer.d.ts  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tests/: download.test.ts  play-list.test.ts  setup.ts
(+938 files in other folders)
