[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-http = "2.5.4"
reqwest = { version = "0.12.25", features = ["json", "stream", "multipart", "cookies"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "process"] }
font-kit = "0.14.3"
open = "5.3.3"
futures-util = "0.3.31"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
